--- a/package.json
+++ b/package.json
@@ -9,14 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.13",
+    "@heroicons/react": "^2.0.16",
+    "@stripe/react-stripe-js": "^2.1.0",
+    "@stripe/stripe-js": "^1.52.0",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "tailwindcss/typography",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "headlessui": "^0.0.0",
+    "heroicons": "^2.0.16",
+    "moment": "^2.29.4",
     "next": "13.2.3",
+    "node-fetch": "^3.3.1",
+    "qs": "^6.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "react-markdown": "^8.0.5",
+    "react-moment": "^1.1.3",
+    "stripe": "^11.17.0",
+    "types": "^0.1.1",
+    "typescript": "4.9.5",
+    "use-shopping-cart": "^3.1.6"
+  },
+  "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
