--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@stripe/stripe-js": "^1.52.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "tailwindcss/typography",
+    "@types/gtag.js": "^0.0.12",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -31,6 +32,7 @@
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.5",
     "react-moment": "^1.1.3",
+    "react-scroll": "^1.8.9",
     "stripe": "^11.17.0",
     "types": "^0.1.1",
     "typescript": "4.9.5",
