--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "stripe": "^11.17.0",
     "types": "^0.1.1",
     "typescript": "4.9.5",
+    "typescript-eslint": "^0.0.1-alpha.0",
     "use-shopping-cart": "^3.1.6"
   },
   "devDependencies": {
