--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,6 @@
     "next/core-web-vitals"
   ],
   "rules": {
-    "@typescript-eslint/no-explicit-any": "off"
+    "@typescript-eslint/no-explicit-any": "error"
   }
 }
